# Mental_Health_Analyzer

./: .env.example  .gitignore  API.py  LLM_logic_for_mood_detection.py  LLM_logic_for_psychiatrist.py  app.js  database.py  index.html  input for mood detection.json  mood_tracker.db  package.json  prompt_for_mood_detection.py  pyproject.toml  requirements.txt  start_backend.bat  start_frontend.bat  styles.css  vercel.json
api/: database.py  index.py  llm_logic_for_mood_detection.py  llm_logic_for_psychiatrist.py  prompt_for_mood_detection.py  prompt_for_psychiatrist.py  requirements.txt
api/routes/: auth.py  chat.py  mood.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/pages/: Chat.css  Chat.jsx  Dashboard.css  Dashboard.jsx  Login.css  Login.jsx  MoodHistory.css  MoodHistory.jsx  MoodQuestionnaire.css  MoodQuestionnaire.jsx
